--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
       function hannesSwitcher() {
         if (clickCount >= 10000) {
           document.getElementById("rubenButton").src = "hannesclicker.png"
+          document.getElementById("hannesButton").hidden = "true"
         }
       }
       
