--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title> Ruben Clicker Beta version</title>
+    <title> Ruben Clicker Test version</title>
     <style>
       #rubenButton {
         height: 50vh;
@@ -16,7 +16,7 @@
       #ouch {
         font-size: 10vh;
         position: fixed;
-        top: 30%;
+        top: 20%;
         left: 60%;
         z-index: 4;
       }
@@ -42,11 +42,12 @@
         top: 10;
         right: 10;
         font-family: "Comic Sans MS", Courier New, "Garamond";
+        max-width: 50%;
       }
     </style>
   </head>
   <body>
-    <p><strong>Welcome to the beta version of Ruben Clicker!</strong></p>
+    <p><strong>Welcome to the test version of Ruben Clicker!</strong></p>
     
     <p><strong>High score:</strong> 15025283 clicks <em>by enormous_fortune in level 2197</em></p>
     
