--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title> Ruben Clicker Test version</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <style>
       #rubenButton {
         height: 50vh;
