--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         place-items: center;
       }
       #rebirthbutton {
-        position: absolute;
+        position: fixed;
         bottom: 5px;
         left: 5px;
         font-size: 10vh;
