--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
         font-family: "Comic Sans MS", Courier New, "Garamond";
         max-width: 50%;
       }
+      #upgradeButton {
+        font-size: 4vh;
+        font-family: "Comic Sans MS", Courier New, "Garamond";
+      }
     </style>
   </head>
   <body>
