--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
       }
       #rebirthButton {
         position: fixed;
-        bottom: 5px;
-        left: 5px;
-        font-size: 10vh;
+        bottom: 0px;
+        left: 0px;
+        font-size: 6vh;
         font-family: "Comic Sans MS", Courier New, "Garamond";
+        max-width: 50%;
         z-index: 2;
       }
       p {
@@ -46,7 +47,9 @@
         max-width: 50%;
       }
       #upgradeButton {
-        font-size: 4vh;
+        font-size: 6vh;
+        right: 0px;
+        bottom: 0px;
         font-family: "Comic Sans MS", Courier New, "Garamond";
       }
     </style>
