--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
       }
       #upgradeButton {
         font-size: 6vh;
+        position: fixed;
         right: 0px;
         bottom: 0px;
         font-family: "Comic Sans MS", Courier New, "Garamond";
+        max-width: 50%;
       }
     </style>
   </head>
