--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
     <p><strong>Clicks per click: </strong><span id="clickperclickdisplay">preparing clicks...</span></p>
 
     <button id="upgradeButton" onclick="upgrade()">Preparing upgrade</button>
+
+    <audio controls loop><source src="Dance of the Sugar Plum Fairy.mp3" type="audio/mpeg"></audio>
     
     <script>
       let clickCount = 9990;
