--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <button id="upgradeButton" onclick="upgrade()">Preparing upgrade</button>
 
-    <audio controls loop><source src="Dance of the Sugar Plum Fairy.mp3" type="audio/mpeg"></audio>
+    <audio autoplay loop><source src="Dance of the Sugar Plum Fairy.mp3" type="audio/mpeg"></audio>
     
     <script>
       let clickCount = 9990;
