--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         const keyName = event.key;
   
         if (keyName === "Enter") {
-          console.log("Don't try that!")
+          window.location.replace("https://iamtheuserjo.github.io/donttrythat/");
         }
       });
     </script>
