--- a/index.html
+++ b/index.html
@@ -86,7 +86,13 @@
     <audio loop id="musicFile">
       <source src="Dance of the Sugar Plum Fairy.mp3" type="audio/mpeg">
     </audio>
-    <button id="musicButton" onclick="playMusic()">Play the music</button>
+
+    <audio loop id="musicFile">
+      <source src="The Entertainer.mp3" type="audio/mpeg">
+    </audio>
+    
+    <button id="musicButton" onclick="playMusic()">Play music 1</button>
+    <button id="musicButton2" onclick="playMusic2()">Play music 2</button>
     <script>
       let clickCount = 9990;
       let rebirthEnabled = false;
@@ -193,6 +199,10 @@
 
       function playMusic() {
         document.getElementById("musicFile").play();
+      }
+
+      function playMusic2() {
+        document.getElementById("musicFile2").play();
       }
 
       document.addEventListener("keydown", (event) => {
