--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <source src="Dance of the Sugar Plum Fairy.mp3" type="audio/mpeg">
     </audio>
 
-    <audio loop id="musicFile">
+    <audio loop id="musicFile2">
       <source src="The Entertainer.mp3" type="audio/mpeg">
     </audio>
     
