--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
     
     <button id="musicButton" onclick="playMusic()">Play music 1</button>
     <button id="musicButton2" onclick="playMusic2()">Play music 2</button>
+
+    <p id="rubenID">preparing RubenID...</p>
+    
     <script>
       let clickCount = 9990;
       let rebirthEnabled = false;
