--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title> Rubenclicker test version 4.1</title>
+    <title> Rubenclicker test version 4.1.1</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
       #rubenButton {
@@ -114,8 +114,11 @@
 
       if (localStorage.getItem('rubenID') == null) {
         localStorage.setItem('rubenID', randomID(2**32))
-        document.getElementById("rubenIDdisplay").innerHTML = 'Your rubenID is ${rubenID}. Please send this in an email to the developer.'
       }
+      
+      let rubenID = localStorage.getItem('rubenID')
+
+      document.getElementById("rubenIDdisplay").innerHTML = 'Your rubenID is ${rubenID}. Please send this in an email to the developer.'
       
       function rubenBeaten() {
         clickCount += 1 * clicksPerClick
