--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title> Rubenclicker test version 4.2</title>
+    <title> Rubenclicker test version 4.2.1</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
       #rubenButton {
@@ -103,7 +103,7 @@
       let rebirthCount = 0;
       let accountLevel = 1;
       let upgradeCount = 0;
-      let clicksPerClick = 1 * accountLevel * (2 ** rebirthCount) + (2 * upgradeCount);
+      let clicksPerClick = 1 * accountLevel * (2 ** rebirthCount) + (accountLevel * upgradeCount);
       let upgradeAvilaible = false;
       let clicksForRebirth = 2000;
       const ouchAudio = new Audio("RubenClickerOuch.mp3")
